# omf-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml  omf.schema.json  requirements.txt
.github/workflows/: audit.yml  ci.yml  docs.yml  python.yml
docs/: build.bat  build.sh  changelog.md  format.md  index.md  parquet.md  requirements.txt  schema_index.md  start.md
docs/c/: arrays.md  attribute.md  colormap.md  element.md  errors.md  grids.md  images.md  index.md  metadata.md  omf1.md  project.md  reader.md  reader_iterators.md  writer.md  writer_iterators.md
docs/c/examples/: attributes.md  geometries.md  metadata.md  pyramid.md  textures.md
docs/c/geometry/: blockmodel.md  composite.md  gridsurface.md  lineset.md  pointset.md  surface.md
docs/python/: full_api.md  index.md
docs/stylesheets/: extra.css
docs/templates/python/material/_base/: children.html.jinja
docs/templates/python/material/_base/docstring/: attributes.html.jinja
examples/: README.md
examples/bunny/: bunny.omf  main.rs
examples/bunny_blocks/: bunny_blocks.csv  bunny_blocks.omf  bunny_centroids_out.csv  main.rs
examples/pyramid/: main.rs  pyramid.omf
omf-c/: Cargo.toml  build.rs  cbindgen.toml
omf-c/examples/: CMakeLists.txt  README.md  attributes.c  attributes_output.txt  build.bat  build.sh  geometries.c  geometries_output.txt  metadata.c  metadata_output.txt  pyramid.c  pyramid_output.txt  textures.c  textures_output.txt
omf-c/src/: arrays.rs  attributes.rs  elements.rs  from_omf.rs  image_data.rs  init_functions.rs  lib.rs  metadata.rs  omf1.rs  read_iterators.rs  reader.rs  to_omf.rs  validation.rs  writer.rs  writer_handle.rs
omf-c/src/error/: mod.rs  state.rs  types.rs
omf-c/src/ffi_tools/: arg.rs  catch.rs  into_ffi.rs  mod.rs  typeless.rs
omf-python/: Cargo.toml  README.md  pyproject.toml  requirements.txt
omf-python/docs/source/: conf.py  index.rst
omf-python/scripts/: generate_test_data.rs
omf-python/src/: array.rs  attribute.rs  block_model.rs  colormap.rs  element.rs  errors.rs  geometry.rs  grid.rs  lib.rs  project.rs
omf-python/src/file/: reader.rs
omf-python/src/omf1/: converter.rs
omf-python/src/validate/: mod.rs  problem.rs
omf-python/tests/: test_block_model.py  test_boolean_attribute.py  test_category_attribute.py  test_color_attribute.py  test_element.py  test_geometry_surface.py  test_grid_surface.py  test_lineset.py  test_mapped_texture_attibute.py  test_number_attribute.py  test_omf1_converter.py  test_pointset.py  test_project.py  test_projected_texture_attribute.py  test_reader.py  test_text_attribute.py  test_vector_attribute.py
omf-python/tests/data/: array_length_mismatch.omf  continuous_colormap.omf  duplicate_element_name.omf  element_metadata.omf  missing_member.omf  missing_parquet.omf  null_attribute_values.omf  one_of_everything.omf  problem.omf
src/: array.rs  attribute.rs  block_model.rs  colormap.rs  date_time.rs  element.rs  error.rs  geometry.rs  grid.rs  lib.rs  project.rs  schema.rs  schema_doc.rs  version.rs
src/data/: iterators.rs  mod.rs  read_checks.rs  traits.rs  write_checks.rs
src/file/: image.rs  mod.rs  read_at.rs  reader.rs  sub_file.rs  write_to.rs  writer.rs  zip_container.rs
src/file/parquet/: mod.rs  reader.rs  schemas.rs  writer.rs
src/omf1/: array.rs  attributes.rs  category_handler.rs  converter.rs  elements.rs  error.rs  mod.rs  model.rs  objects.rs  reader.rs
src/pqarray/: array_type.rs  mod.rs  read.rs  schema.rs  source.rs  tests.rs  write.rs
src/validate/: mod.rs  problem.rs  validator.rs
tests/: conversion_tests.rs  integration_tests.rs  one_of_everything.omf  one_of_everything.omf.json
tests/omf1/: plane_surface.omf  test_proj.omf
