[package]
name = "omf"
version = "0.1.0-beta.1"
description = "File reader and writer for Open Mining Format."
authors = ["Tim Evans <tim.evans@seequent.com>"]
license = "MIT"
edition = "2021"
publish = true
exclude = ["/.github", "/.vscode"]

[dependencies]
bytes = { workspace = true, optional = true }
chrono.workspace = true
flate2.workspace = true
image = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
bytes.workspace = true
regex.workspace = true
glam = "0.29.2"

[features]
default = ["image", "parquet", "omf1"]
image = ["dep:image"]
parquet = ["dep:parquet", "dep:bytes"]
omf1 = ["parquet"]

[workspace]
members = ["omf-c", "omf-python"]

[workspace.dependencies]
bytes = "1.8.0"
cbindgen = { version = "0.27", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
flate2 = "1.0.34"
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
] }
parquet = { version = "53.2.0", default-features = false, features = ["flate2"] }
regex = "1.11.1"
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["float_roundtrip"] }
thiserror = "2.0.3"
zip = { version = "~2.0", default-features = false }
