[package]
name = "omf"
version = "0.1.0-beta.1"
description = "File reader and writer for Open Mining Format."
authors = ["Tim Evans <tim.evans@seequent.com>"]
license = "MIT"
edition = "2021"
publish = true
exclude = ["/.github", "/.vscode"]

[dependencies]
bytes = { workspace = true, optional = true }
chrono.workspace = true
flate2.workspace = true
image = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
bytes.workspace = true
regex.workspace = true
glam = "0.30"

[features]
default = ["image", "parquet", "omf1"]
image = ["dep:image"]
parquet = ["dep:parquet", "dep:bytes"]
omf1 = ["parquet"]

[workspace]
members = ["omf-c", "omf-python"]

[workspace.dependencies]
bytes = "1.10"
cbindgen = { version = "0.28", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
env_logger = "0.11"
flate2 = "1.1"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
itertools = "0.14"
numpy = "0.23"
parquet = { version = "54.2", default-features = false, features = ["flate2"] }
pyo3 = { version = "0.23", features = ["extension-module", "chrono", "abi3"] }
pyo3-stub-gen = "0.7"
regex = "1.11"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde-pyobject = "0.6"
thiserror = "2.0"
zip = { version = "~2.0", default-features = false }
