[package]
name = "omfc"
description = "C bindings for `omf`."
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "omfc"
crate-type = ["cdylib"]

[dependencies]
omf = { path = ".." }
chrono.workspace = true
image.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
omf = { path = ".." }
cbindgen.workspace = true
