[package]
name = "omf_python"
version = "0.2.0"
description = "Python bindings for the Rust OMF package."
edition = "2021"
license = "MIT"

[dependencies]
omf = { path = ".." }
pyo3 = { version = "0.22.6", features = ["extension-module", "chrono"] }
pyo3-stub-gen = "0.6.0"
env_logger = "0.11.5"
serde-pyobject = "0.4.0"
serde_json.workspace = true
chrono.workspace = true
zip.workspace = true
serde.workspace = true
flate2.workspace = true
numpy = "0.22.1"
itertools = "0.13.0"

[build-dependencies]
omf = { path = ".." }

[lib]
name = "omf_python"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[[bin]]
name = "generate_test_data"
path = "scripts/generate_test_data.rs"
