set(CMAKE_CONFIGURATION_TYPES Release)
cmake_minimum_required(VERSION 3.22)
project(omf_c_examples)

if(MSVC)
    set(CMAKE_C_FLAGS "/utf-8 /D_CRT_SECURE_NO_WARNINGS /W3 /WX /O2")
    link_libraries(omfc.dll.lib)
else()
    set(CMAKE_C_FLAGS "-g -Wall -Werror -O3")
    link_libraries(libomfc.so)
endif()
include_directories(../../target/release)
link_directories(../../target/release)

add_executable(pyramid pyramid.c)
add_executable(metadata metadata.c)
add_executable(geometries geometries.c)
add_executable(attributes attributes.c)
add_executable(textures textures.c)
